--- a/.github/workflows/user-code-style.yml
+++ b/.github/workflows/user-code-style.yml
@@ -22,66 +22,34 @@ on:
         type: string
 
 jobs:
-  header-fixer:
-    name: 🧾 Header Fixer
+  code-style-fix:
+    name: 👤🖌️ Code Style Fix
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-
+        with:
+          ref: ${{ github.ref }}
       - name: Process C# file headers
         uses: ./.github/actions/code-style/header-fixer
         with:
           mode: "${{ github.event.inputs.mode }}"
-
-  trailing-whitespace:
-    name: 🧹 Trailing Whitespace
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-
       - name: Process trailing whitespace
         uses: ./.github/actions/code-style/trailing-whitespace
         with:
           mode: "${{ github.event.inputs.mode }}"
-
-  using-sorter:
-    name: 🔀 Using Sorter
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-
       - name: Process using directives
         uses: ./.github/actions/code-style/using-sorter
         with:
           mode: "${{ github.event.inputs.mode }}"
-
-  namespace-check:
-    name: 📂 Namespaces Check
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-
       - name: Run Namespace Fixer
         uses: ./.github/actions/code-style/namespace-fixer
         with:
           mode: "${{ github.event.inputs.mode }}"
-
-  commit-changes:
-    name: 📦 Commit Code Style Fixes
-    needs: [header-fixer, trailing-whitespace, using-sorter, namespace-check]
-    if: ${{ github.event.inputs.mode == 'fix' }}
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11
-        with:
-          ref: ${{ github.ref }}
-      - name: Configure Git
+      - name: Commit and Push code style fixes
+        if: ${{ github.event.inputs.mode == 'fix' }}
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-      - name: Commit and Push code style fixes
-        run: |
           git add .
           if ! git diff --cached --quiet; then
             git commit -m "chore(ci): apply code style fixes"
