--- a/.github/actions/code-style/header-fixer/action.yml
+++ b/.github/actions/code-style/header-fixer/action.yml
@@ -78,11 +78,59 @@ runs:
                 echo "Updating header in $file"
                 # Extract content after header template
                 CONTENT=$(tail -n +$((HEADER_LINE_COUNT + 1)) "$file")
-                # Close any open comment block
+                # Analyze comment blocks and balance them intelligently
                 OPEN_COUNT=$(grep -o '/\*' <<< "$CONTENT" | wc -l)
                 CLOSE_COUNT=$(grep -o '\*/' <<< "$CONTENT" | wc -l)
+                
                 if [ $OPEN_COUNT -gt $CLOSE_COUNT ]; then
+                  # More opening than closing comments - add a closing comment
                   CONTENT="$CONTENT"$'\n'"*/"
+                  echo "Added missing comment closing */"
+                elif [ $CLOSE_COUNT -gt $OPEN_COUNT ]; then
+                  # More closing than opening comments - analyze content structure
+                  # First check for stray closing comments to make /**/
+                  if grep -q '\*/' <<< "$CONTENT"; then
+                    # Replace each stray */ with /**/
+                    MODIFIED_CONTENT=""
+                    while IFS= read -r line; do
+                      if [[ "$line" =~ \*/ && ! "$line" =~ /\* ]]; then
+                        # This line has a closing comment without an opening comment
+                        # Replace */ with /**/
+                        MODIFIED_LINE=$(echo "$line" | sed -E 's/(^|[^/])\*\//\1\/\*\*\//g')
+                        MODIFIED_CONTENT+="$MODIFIED_LINE"$'\n'
+                      else
+                        MODIFIED_CONTENT+="$line"$'\n'
+                      fi
+                    done <<< "$CONTENT"
+                    CONTENT="${MODIFIED_CONTENT%$'\n'}"
+                    echo "Added missing comment opening /* directly before closing */ markers"
+                  # Then check if there are lines starting with * (comment block structure)
+                  elif echo "$CONTENT" | head -n 5 | grep -q '^[[:space:]]*\*'; then
+                    # Find the first line with a * pattern
+                    LINE_NUM=1
+                    while IFS= read -r line; do
+                      if [[ "$line" =~ ^[[:space:]]*\* ]]; then
+                        break
+                      fi
+                      ((LINE_NUM++))
+                    done <<< "$CONTENT"
+                    
+                    # Split content to insert /* before first * line
+                    BEFORE_COMMENT=$(echo "$CONTENT" | head -n $((LINE_NUM-1)))
+                    COMMENT_AND_AFTER=$(echo "$CONTENT" | tail -n +$LINE_NUM)
+                    
+                    # Recombine with /* added
+                    if [ -n "$BEFORE_COMMENT" ]; then
+                      CONTENT="${BEFORE_COMMENT}"$'\n'"/*"$'\n'"${COMMENT_AND_AFTER}"
+                    else
+                      CONTENT="/*"$'\n'"${COMMENT_AND_AFTER}"
+                    fi
+                    echo "Added missing comment opening /* before line $LINE_NUM"
+                  else
+                    # No clear comment structure, add /* at beginning
+                    CONTENT="/*"$'\n'"$CONTENT"
+                    echo "Added missing comment opening /* at beginning"
+                  fi
                 fi
                 # Prepare header
                 NEW_HEADER=$(printf "%s\n" "${HEADER_LINES_ARRAY[@]}")
