--- a/.github/actions/code-style/namespace-fixer/action.yml
+++ b/.github/actions/code-style/namespace-fixer/action.yml
@@ -12,7 +12,10 @@ runs:
       if: always()
       shell: bash
       run: |
+        # Set the shell to continue on error
         set +e
+
+        # Get the list of changed files
         if [ -n "${{ github.event.pull_request }}" ]; then
           FILES=$(git diff --name-only "${{ github.event.pull_request.base.sha }}" "${{ github.event.pull_request.head.sha }}" -- '*.cs')
         else
