ci: fix wiping out using statements

--- a/.github/actions/code-style/header-fixer/action.yml
+++ b/.github/actions/code-style/header-fixer/action.yml
@@ -96,7 +96,7 @@ runs:
                 echo "Updating header in $file"
                 echo "DEBUG: mismatch_line=$mismatch_line, HEADER_LINE_COUNT=$HEADER_LINE_COUNT"
                 # Extract content after header template
-                CONTENT=$(tail -n +$((HEADER_LINE_COUNT + 1)) "$file")
+                CONTENT=$(cat "$file")
                 echo "DEBUG: Initial content snippet: $(printf '%s\n' "$CONTENT" | head -n 3 | sed 's/^/DEBUG: /')"
                 
                 # Prepare header
