--- a/src/SmartHopper.Config/SmartHopper.Config.csproj
+++ b/src/SmartHopper.Config/SmartHopper.Config.csproj
@@ -26,9 +26,9 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="System.Net.Http" Version="4.3.4" />
-    <PackageReference Include="Grasshopper" Version="8.19.25132.1001" ExcludeAssets="runtime">
+    <!-- <PackageReference Include="Grasshopper" Version="8.19.25132.1001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
-    </PackageReference>
+    </PackageReference> -->
     <PackageReference Include="RhinoCommon" Version="8.19.25132.1001" ExcludeAssets="runtime">
       <Source>https://mcneel.jfrog.io/artifactory/api/nuget/rhino-packages</Source>
     </PackageReference>
