fix(readme): make tests badge show results for the current branch

--- a/.github/workflows/ci-dotnet-tests.yml
+++ b/.github/workflows/ci-dotnet-tests.yml
@@ -11,10 +11,12 @@ name: 🧪 .NET CI
 # - pull-requests: read - Required to read pull request information
 
 on:
+  push:
+    branches-ignore:
+      - 'dependabot/**'  # Ignore dependabot branches
   pull_request:
     branches: 
-      - main
-      - release/*
+      - '**'  # Run on all branches for PRs
 
 permissions:
   contents: read
