feat: limit ci test to pushed to main dev and release branches and pr to any branch

--- a/.github/workflows/ci-dotnet-tests.yml
+++ b/.github/workflows/ci-dotnet-tests.yml
@@ -12,8 +12,10 @@ name: 🧪 .NET CI
 
 on:
   push:
-    branches-ignore:
-      - 'dependabot/**'  # Ignore dependabot branches
+    branches:
+      - main
+      - dev
+      - release/**
   pull_request:
     branches: 
       - '**'  # Run on all branches for PRs
