--- a/.github/workflows/release-4-build.yml
+++ b/.github/workflows/release-4-build.yml
@@ -113,141 +113,14 @@ jobs:
       run: |
         Write-Host "This is a draft release. Skipping build and upload."
         exit 0
-    
-    - name: Check for existing .NET SDK
-      id: check-dotnet
-      shell: bash
-      run: |
-        if dotnet --version >/dev/null 2>&1; then
-          echo "installed=true" >> $GITHUB_OUTPUT
-        else
-          echo "installed=false" >> $GITHUB_OUTPUT
-        fi
-        
-    - name: Setup .NET
-      if: ${{ steps.check-dotnet.outputs.installed == 'false' }}
-      uses: actions/setup-dotnet@v4
+
+    - name: Dotnet Build
+      uses: ./.github/actions/dotnet-build
       with:
-        dotnet-version: '7.0.x'
+        solution: SmartHopper.sln
+        configuration: Release
 
-    - name: Decode strong-name key via script
-      shell: pwsh
-      run: |
-        # Initialize Developer PowerShell environment for VS tools
-        $vsDevCmd = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat'
-        if (-not (Test-Path $vsDevCmd)) {
-          Write-Host "##[warning] Visual Studio Developer Command Prompt not found at $vsDevCmd. Trying to find it..."
-          $vsDevCmd = Get-ChildItem -Path "C:\Program Files\Microsoft Visual Studio" -Recurse -Filter "VsDevCmd.bat" | Select-Object -First 1 -ExpandProperty FullName
-          if (-not $vsDevCmd) {
-            Write-Host "##[error] Could not find Visual Studio Developer Command Prompt"
-            exit 1
-          }
-        }
-        Write-Host "Using Visual Studio Developer environment: $vsDevCmd"
-        
-        # Import VS Dev environment
-        & cmd /c "call `"$vsDevCmd`" && set" | ForEach-Object {
-          if ($_ -match '^([^=]+)=(.*)$') {
-            [System.Environment]::SetEnvironmentVariable($matches[1], $matches[2])
-          }
-        }
-        
-        # Now run the SNK script in the VS Dev environment
-        pwsh ./Sign-StrongNames.ps1 -Base64 "${{ secrets.SIGNING_SNK_BASE64 }}"
-        
-        # Verify the SNK file was created
-        if (-not (Test-Path -Path "signing.snk")) {
-          Write-Host "##[error] signing.snk file was not created"
-          exit 1
-        }
-        
-        # Show the absolute path for reference
-        $absolutePath = Resolve-Path -Path "signing.snk"
-        Write-Host "SNK absolute path: $absolutePath"
-    
-    - name: Restore dependencies
-      run: dotnet restore SmartHopper.sln
-    
-    - name: Checkout libs
-      uses: actions/checkout@v3
-      with:
-        repository: architects-toolkit/SmartHopper-unlicensed-libs
-        token: ${{ secrets.LIBS_REPO_PAT }}
-        path: lib
 
-    - name: Build solution
-      shell: pwsh
-      run: |
-        # Initialize Developer PowerShell environment for VS tools
-        $vsDevCmd = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat'
-        if (Test-Path $vsDevCmd) {
-          Write-Host "Setting up Visual Studio Developer environment..."
-          & cmd /c "call `"$vsDevCmd`" && set" | ForEach-Object {
-            if ($_ -match '^([^=]+)=(.*)$') {
-              [System.Environment]::SetEnvironmentVariable($matches[1], $matches[2])
-            }
-          }
-        } else {
-          Write-Host "##[warning] Visual Studio Developer Command Prompt not found. Proceeding with regular environment."
-        }
-        
-        $snkPath = Resolve-Path -Path "signing.snk" | Select-Object -ExpandProperty Path
-        Write-Host "Building with SNK at: $snkPath"
-        dotnet build SmartHopper.sln --configuration Release --no-restore /p:SignAssembly=true "/p:AssemblyOriginatorKeyFile=$snkPath"
-    
-    - name: Decode Authenticode PFX from secrets
-      shell: pwsh
-      run: |
-        # Setup VS Developer environment
-        $vsDevCmd = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat'
-        if (Test-Path $vsDevCmd) {
-          & cmd /c "call `"$vsDevCmd`" && set" | ForEach-Object {
-            if ($_ -match '^([^=]+)=(.*)$') {
-              [System.Environment]::SetEnvironmentVariable($matches[1], $matches[2])
-            }
-          }
-        }
-        
-        Write-Host "Decoding Authenticode PFX from secrets..."
-        pwsh ./Sign-Authenticode.ps1 -Base64 "${{ secrets.SIGNING_PFX_BASE64 }}" -Password "${{ secrets.SIGNING_PFX_PASSWORD }}"
-
-    - name: Authenticode-sign provider assemblies
-      shell: pwsh
-      run: |
-        # Setup VS Developer environment
-        $vsDevCmd = 'C:\Program Files\Microsoft Visual Studio\2022\Enterprise\Common7\Tools\VsDevCmd.bat'
-        if (Test-Path $vsDevCmd) {
-          & cmd /c "call `"$vsDevCmd`" && set" | ForEach-Object {
-            if ($_ -match '^([^=]+)=(.*)$') {
-              [System.Environment]::SetEnvironmentVariable($matches[1], $matches[2])
-            }
-          }
-        }
-        
-        # Make signtool available by adding Windows SDK paths to PATH
-        $env:PATH += ";C:\Program Files (x86)\Windows Kits\10\bin\10.0.22621.0\x64"
-        $env:PATH += ";C:\Program Files (x86)\Windows Kits\10\bin\x64"
-        
-        $version = "${{ steps.determine_version.outputs.VERSION }}"
-        $buildPath = "bin/$version/Release"
-        
-        # Verify the build directory exists
-        if (-not (Test-Path $buildPath)) {
-          Write-Host "##[warning] Build directory '$buildPath' not found. Checking for alternate paths..."
-          # Try to find any build output directory
-          $possibleDirs = Get-ChildItem -Path "bin" -Directory -Recurse | Where-Object { $_.Name -eq "Release" }
-          if ($possibleDirs) {
-            $buildPath = $possibleDirs[0].FullName
-            Write-Host "Found alternate build path: $buildPath"
-          } else {
-            Write-Host "##[error] No build output directory found. Skipping signing."
-          exit 1
-        }
-        }
-        
-        Write-Host "Auth-signing SmartHopper provider DLLs in $buildPath"
-        & ./Sign-Authenticode.ps1 -Sign $buildPath -Password "${{ secrets.SIGNING_PFX_PASSWORD }}"
-        if ($LASTEXITCODE -ne 0) { Write-Error "Authenticode signing failed for provider assemblies"; exit $LASTEXITCODE }
 
     - name: Create Output Directory
       shell: pwsh
