--- a/.github/actions/dotnet-build/action.yml
+++ b/.github/actions/dotnet-build/action.yml
@@ -59,11 +59,12 @@ runs:
         }
 
     - name: 'Checkout unlicensed libs'
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
       with:
         repository: 'architects-toolkit/SmartHopper-unlicensed-libs'
         token: ${{ inputs.libs_repo_pat }}
         path: lib
+        ref: main
 
     - name: 'Restore dependencies'
       shell: pwsh
