--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -54,7 +54,9 @@ jobs:
     name: 🖌️ Code Style Check
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@b4ffde65f46336ab88eb53be808477a3936bae11 # v4.1.1
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Validate C# file headers
         uses: ./.github/actions/code-style/header-fixer
